--- a/EcSignatureConverter/ecsignatureconverterp1363toder.html
+++ b/EcSignatureConverter/ecsignatureconverterp1363toder.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>EC P-256 signature SHA-256 (signature only)</title>
+	<title>EC signature converter P1363 to DER encoding</title>
 	<style>
 		body {background-color: powderblue;}
 		h1 {color: blue;}
