--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!-- saved from url=(0016)http://localhost -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -569,7 +569,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">❌</td>
 </tr>
 <tr>
-<td><a href="base64_encoding_decoding.md">Base64 encoding &amp; decoding</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/base64_encoding_decoding.md">Base64 encoding &amp; decoding</a></td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -579,7 +579,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 </tr>
 <tr>
-<td><a href="binary_data_hex_string.md">binary data to a hex string &amp; back</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/binary_data_hex_string.md">binary data to a hex string &amp; back</a></td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -589,7 +589,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 </tr>
 <tr>
-<td><a href="sha256_hash.md">SHA256 hashing</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/sha256_hash.md">SHA256 hashing</a></td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
@@ -785,6 +785,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <th style="text-align: center;">CryptoJS</th>
 <th style="text-align: center;">NodeJS</th>
 <th style="text-align: center;">NodeJs forge</th>
+<th style="text-align: center;">WebCrypto</th>
 </tr>
 </thead>
 <tbody>
@@ -796,6 +797,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
+<td style="text-align: center;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_decryption_oaep_sha1_string.md">RSA OEAP padding SHA-1 String decryption only</a></td>
@@ -803,6 +805,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 </tr>
@@ -814,9 +817,11 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td style="text-align: center;">🔜</td>
 <td style="text-align: center;">🔜</td>
 <td style="text-align: center;">🔜</td>
+<td style="text-align: center;">🔜</td>
 </tr>
 <tr>
 <td><a href="readme.md">RSA OEAP padding SHA-256 String decryption only</a></td>
+<td style="text-align: center;">🔜</td>
 <td style="text-align: center;">🔜</td>
 <td style="text-align: center;">🔜</td>
 <td style="text-align: center;">🔜</td>
@@ -1172,11 +1177,11 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 <td>generate an Elliptic curve (EC) private key and public key in PEM encoding</td>
 </tr>
 <tr>
-<td><a href="rsa_signature_file_openssl.md">RSA file signature with PKCS#1.5 padding</a></td>
-<td>the signature and verification is compatible with solutions in  <a href="rsa_signature_string.md">RSA string signature with PKCS#1.5 padding</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_signature_file_openssl.md">RSA file signature with PKCS#1.5 padding</a></td>
+<td>the signature and verification is compatible with solutions in  <a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_signature_string.md">RSA string signature with PKCS#1.5 padding</a></td>
 </tr>
 <tr>
-<td><a href="rsa_signature_pss_file_openssl.md">RSA file signature with PSS padding</a></td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/rsa_signature_pss_file_openssl.md">RSA file signature with PSS padding</a></td>
 <td>the signature and verification is compatible with solutions in  <a href="rsa_signature_pss_string.md">RSA string signature with PSS padding</a></td>
 </tr>
 <tr>
@@ -1269,7 +1274,7 @@ A lot of solutions run with the built-in cryptographic modules but especially th
 </tr>
 </tbody>
 </table>
-<p>Last update: Jan. 27th 2021</p>
+<p>Last update: Jan. 29th 2021</p>
 <p>The website is published under:  <a href="https://java-crypto.github.io/cross_platform_crypto//">https://java-crypto.github.io/cross_platform_crypto//</a></p>
 <p>If you are interested in much more information on cryptography in Java (and in German language) then visit my webpages <a href="http://javacrypto.bplaced.net/">http://javacrypto.bplaced.net</a> and <a href="http://java-crypto.bplaced.net/">http://java-crypto.bplaced.net</a>.</p>
 
